--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -44,7 +44,7 @@
         </div>
         </div>
         <div class="estructura box_columnaUno">
-            <a href=""><img th:src="@{/imagenes/grupos.png}"> Grupos</a>
+<!--            <a href=""><img th:src="@{/imagenes/grupos.png}"> Grupos</a>-->
             <!--se lo agrego aca... despues vemos bien donde lo ubicamos-->
             <a th:href="@{/herramientas-IA.html}" class="btn_subir_archivos">
                 <img th:src="@{/imagenes/pdf-icon.png}" alt="icono-pdf">Herramientas de IA
@@ -83,15 +83,15 @@
     </section>
     <aside class="columnaTres">
         <div class="estructura">
-            <h2>Alumnos cursando...</h2>
-            <p>Ingeniería en Sistemas</p>
-            <div class="recomendaciones_users" >
-                <img class="user2" th:src="@{/imagenes/user2.png}">
-                <img class="user2" th:src="@{/imagenes/user2.png}">
-                <img class="user2" th:src="@{/imagenes/user2.png}">
-                <img class="user2" th:src="@{/imagenes/user2.png}">
-                <img class="user2" th:src="@{/imagenes/user2.png}">
-            </div>
+<!--            <h2>Alumnos cursando...</h2>-->
+<!--            <p>Ingeniería en Sistemas</p>-->
+<!--            <div class="recomendaciones_users" >-->
+<!--                <img class="user2" th:src="@{/imagenes/user2.png}">-->
+<!--                <img class="user2" th:src="@{/imagenes/user2.png}">-->
+<!--                <img class="user2" th:src="@{/imagenes/user2.png}">-->
+<!--                <img class="user2" th:src="@{/imagenes/user2.png}">-->
+<!--                <img class="user2" th:src="@{/imagenes/user2.png}">-->
+<!--            </div>-->
             <h2>Quizás conozcas...</h2>
             <ul>
                 <li th:each="usuario : ${usuariosNuevos}">
