se comenta grupos y herrmienta ia en html ia

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/herramientas-IA.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/herramientas-IA.html
@@ -32,14 +32,14 @@
                 <li class="titulo" th:text="${usuario.carrera != null ? usuario.carrera.nombre : 'Sin carrera'}">Carrera</li>
             </ul>
         </div>
-        <div class="estructura box_columnaUno">
-            <a href=""><img th:src="@{/imagenes/grupos.png}"> Grupos</a>
-            <a href=""><img th:src="@{/imagenes/guardados.png}"> Elementos guardados</a>
-            <!--se lo agrego aca... despues vemos bien donde lo ubicamos-->
-            <a th:href="@{/herramientas-IA.html}" class="btn_subir_archivos"><img th:src="@{/imagenes/pdf-icon.png}">Herramientas IA</a>
-            <!--<a href=""><img src="../../../resources/core/imagenes/grupos.png"> Grupos</a>
-            <a href=""><img src="../../../resources/core/imagenes/guardados.png"> Elementos guardados</a>-->
-        </div>
+<!--        <div class="estructura box_columnaUno">-->
+<!--            <a href=""><img th:src="@{/imagenes/grupos.png}"> Grupos</a>-->
+<!--            <a href=""><img th:src="@{/imagenes/guardados.png}"> Elementos guardados</a>-->
+<!--            &lt;!&ndash;se lo agrego aca... despues vemos bien donde lo ubicamos&ndash;&gt;-->
+<!--            <a th:href="@{/herramientas-IA.html}" class="btn_subir_archivos"><img th:src="@{/imagenes/pdf-icon.png}">Herramientas IA</a>-->
+<!--            &lt;!&ndash;<a href=""><img src="../../../resources/core/imagenes/grupos.png"> Grupos</a>-->
+<!--            <a href=""><img src="../../../resources/core/imagenes/guardados.png"> Elementos guardados</a>&ndash;&gt;-->
+<!--        </div>-->
     </aside>
     <section class="columnaDos">
 
