cambios css y se agreg max 400 carcteres bot publisher

--- a/tallerwebi-base/src/main/webapp/resources/core/css/base.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/base.css
@@ -388,8 +388,11 @@ width: auto;
 
 .box_botones_acciones-publicacion {
     display: flex;
-    justify-content: flex-end; /* 🔥 LLEVA LOS BOTONES AL LADO DERECHO */
-    align-items: center;       /* 🔥 Centra verticalmente */
-    gap: 1rem;                 /* Espacio entre botones */
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1rem;
     margin-top: 1rem;
 }
+
+.img-publicidad{
+width:250px}
