--- a/tallerwebi-base/src/main/webapp/resources/core/css/perfil.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/perfil.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     gap: 3rem;
+    width: 20rem;
 }
 .contenedor_usuario_btn{
     display: flex;
@@ -269,3 +270,7 @@
 .menu-notificaciones .dropdown li:hover {
   background-color: #3d3f40; /* u*/
 }
+
+
+.form-publi-perfil{
+margin-bottom:5rem}
