--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/chat.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/chat.html
@@ -66,5 +66,6 @@
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 <script th:src="@{/js/chat.js}"></script>
+<script th:src="@{/js/buscarPersona.js}"></script>
 </body>
 </html>
