--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -25,7 +25,7 @@
     <img class="logo" th:src="@{/imagenes/logo.png}">
     <!--<img class="logo" src="../../../resources/core/imagenes/logo.png">-->
 </nav>
-<main role="main" class="contenedor">
+<main role="main" class="contenedor" style="margin: auto;">
     <div id="loginbox"  class="contenedor_form">
         <form action="#" th:action="@{/registrarme}" method="POST" th:object="${usuario}" accept-charset="UTF-8">
             <h3>Nuevo Usuario</h3>
